--- a/package.json
+++ b/package.json
@@ -10,13 +10,15 @@
     "@tailwindcss/forms": "^0.4.0",
     "next": "latest",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "tailwind-scrollbar-hide": "^1.1.7"
   },
   "devDependencies": {
     "@types/node": "17.0.4",
     "@types/react": "17.0.38",
     "autoprefixer": "^10.4.0",
     "postcss": "^8.4.5",
+    "tailwind-scrollbar": "^1.3.1",
     "tailwindcss": "^3.0.7",
     "typescript": "4.5.4"
   }
