--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "@heroicons/react": "^1.0.5",
     "@tailwindcss/forms": "^0.4.0",
     "firebase": "^9.6.3",
+    "formik": "^2.2.9",
     "next": "latest",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "recoil": "^0.5.2",
     "tailwind-scrollbar-hide": "^1.1.7",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@types/node": "17.0.4",
