--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "@heroicons/react": "^1.0.5",
     "@tailwindcss/forms": "^0.4.0",
+    "@welldone-software/why-did-you-render": "^6.2.3",
     "firebase": "^9.6.3",
     "formik": "^2.2.9",
     "next": "latest",
