--- a/package.json
+++ b/package.json
@@ -8,20 +8,21 @@
   "dependencies": {
     "@heroicons/react": "^1.0.5",
     "@tailwindcss/forms": "^0.4.0",
-    "@welldone-software/why-did-you-render": "^6.2.3",
     "firebase": "^9.6.3",
     "formik": "^2.2.9",
+    "moment": "^2.29.1",
     "next": "latest",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-moment": "^1.1.1",
     "recoil": "^0.5.2",
     "tailwind-scrollbar-hide": "^1.1.7",
-    "uuid": "^8.3.2",
     "yup": "^0.32.11"
   },
   "devDependencies": {
     "@types/node": "17.0.4",
     "@types/react": "17.0.38",
+    "@welldone-software/why-did-you-render": "^6.2.3",
     "autoprefixer": "^10.4.0",
     "postcss": "^8.4.5",
     "tailwind-scrollbar": "^1.3.1",
